Fix problem that the image width overflow preview modal box

--- a/src/global/supports/resources/custom.css
+++ b/src/global/supports/resources/custom.css
@@ -30,6 +30,9 @@
 .uploadingImagies {
     text-align: center;
 }
+.uploadingImagies img{
+    max-width: 100%;
+}
 .uploadingImagies a {
     font-size: 20px;
     position: relative;
